--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Sei Kang"
   pronouns         : # example: "she/her"  
   bio              : "M.S. student at Empathic Computing Lab in Korea, Chonnam National University"
-  location         : "Gwangju, Korea"
+  location         : "Gwangju, South Korea"
   employer         : #"Chonnam National University"
   uri              : "https://sites.google.com/view/arvrlab/home"
   email            : "gsi7409@jnu.ac.kr" 
