--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "sayyes304/sayyes304.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile_sei.jpg"
   name             : "Sei Kang"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student at Empathic Computing Lab in Korea, Chonnam National University"
@@ -238,6 +238,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
       comments: true
@@ -249,6 +250,7 @@ defaults:
       type: pages
     values:
       layout: single
+      classes: wide
       author_profile: true
   # _teaching
   - scope:
@@ -256,6 +258,7 @@ defaults:
       type: teaching
     values:
       layout: single
+      classes: wide
       author_profile: true
       share: true
       comments: true
@@ -265,6 +268,7 @@ defaults:
       type: publications
     values:
       layout: single
+      classes: wide
       author_profile: true
       share: true
       comments: true
@@ -274,6 +278,7 @@ defaults:
       type: portfolio
     values:
       layout: single
+      classes: wide
       author_profile: true
       share: true
       comment: true
@@ -283,6 +288,7 @@ defaults:
       type: talks
     values:
       layout: talk
+      classes: wide
       author_profile: true
       share: true
 
