--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,4 @@ main:
   # - title: "Publications"
   #   url: /publications/
   - title: "CV"
-    url: "/files/CV_seikang.pdf"
+    url: "/files/CV_강세이.pdf"
